Formulario de inscripción en index

--- a/en/index.html
+++ b/en/index.html
@@ -128,13 +128,27 @@
 
             <br>
 
-                <div class="row center">
+            <div class="row center">
                 <h4 class="header col s12 light">Plurinational Bayes School-Congress 2024!</h4>
-                <h6 class="header col s12 light"><b>Learn to teach to learn</b></h6>
+
+                <br>
+                <br>
+
+                <h5 class="header col s12 light">Registration is open until April 14.
+                </h5>
+                <h6>
+                Here you can access <a href="https://forms.gle/y1tgmc16LXaFHwJo8"> the registration form</a>
+                and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/static/VolanteBP2024.png" download target="_blank">last flayer</a>.
+                </h5>
+                </h6>
 
                 <br>
 
+
+
                 <h6 class="header col s12 light">
+                <b>Learn to teach to learn</b>.
+                <br>
                 Preserve the previous belief that remains compatible with the data.
                 <br>
                 Intersubjective agreements in contexts of uncertainty.
