--- a/es/index.html
+++ b/es/index.html
@@ -169,12 +169,26 @@
 
             <div class="row center">
                 <h4 class="header col s12 light">Escuela-Congreso Bayes Plurinacional 2024!</h4>
-                <h6 class="header col s12 light"><b>Aprender a enseñar a aprender</b></h6>
+                <!--<h6 class="header col s12 light"><b>Aprender a enseñar a aprender</b></h6>-->
+
+                <br>
+                <br>
+
+                <h5 class="header col s12 light">Inscripciones abiertas hasta el 14 de abril.
+                </h5>
+                <h6>
+                Aquí puede acceder al <a href="https://forms.gle/y1tgmc16LXaFHwJo8">formulario de inscripción</a>
+                y
+                al <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/static/VolanteBP2024.png" download target="_blank">último volante</a>.
+                </h5>
+                </h6>
 
                 <br>
 
                 <h6 class="header col s12 light">
-                Preservar la creencia previa que sigue siendo compatible con los datos.
+                <b>Apender a enseñar a aprender</b>.
+                <br>
+                Preservando la creencia previa que sigue siendo compatible con los datos.
                 <br>
                 Acuerdos intersubjetivos en contextos de incertidumbre.
                 <br>
