--- a/en/index.html
+++ b/en/index.html
@@ -149,7 +149,9 @@
                 <h6 class="header col s12 light">
                 <b>Learn to teach to learn</b>.
                 <br>
-                Preserve the previous belief that remains compatible with the data.
+                Preserving the previous belief that remains compatible with the data.
+                <br>
+                Predicting with the contribution of all hypotheses.
                 <br>
                 Intersubjective agreements in contexts of uncertainty.
                 <br>
