--- a/es/index.html
+++ b/es/index.html
@@ -190,6 +190,8 @@
                 <br>
                 Preservando la creencia previa que sigue siendo compatible con los datos.
                 <br>
+                Prediciendo con la contribución de todas las hipótesis.
+                <br>
                 Acuerdos intersubjetivos en contextos de incertidumbre.
                 <br>
                 Memoria, Verdad y Justicia.
