--- a/en/seminar.html
+++ b/en/seminar.html
@@ -132,7 +132,7 @@
             <p>
                 The webinar is an opportunity to discuss a wide range of topics.
              We focus on Bayesian aspects of practical, theoretical and philosophical applications in all branches of science and in all productive and social activities. If you want to participate, send your proposal through the form:
-             <a href="https://bit.ly/SeminarioComunidadBayesiana">https://bit.ly/SeminarioComunidadBayesiana</a>.
+             <a href="https://bayesplurinacional.org/link/InscriptionVirtualEvents.html">bayesplurinacional.org/link/InscriptionVirtualEvents.html</a>.
             </p>
 
             <br>
