--- a/en/index.html
+++ b/en/index.html
@@ -124,55 +124,64 @@
             <br><br>
             <div class="center"><img class="responsive-img" src="../logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
             <h6 class="header col s12 light"><b>Promoting Bayesian Intelligence in Plurinational America and the Global South.</b></h6>
+
+            <h6 class="header col s12 light">
+            Preserving the previous belief that remains compatible with the data.
+            Predicting with the contribution of all hypotheses.
+            Optimal belief distribution given the available information.
+            Intersubjective agreements in contexts of uncertainty.
+            Memory, Truth and Justice.
+            </h6>
             </div>
 
             <br>
 
             <div class="row center">
                 <h4 class="header col s12 light">Plurinational Bayes School-Congress 2024!</h4>
-
+                <h5 class="header col s12 light">
+                August 6 to 9. Salta, Argentina. Free of charge.
                 <br>
-                <br>
-
-                <h5 class="header col s12 light">Registration is open until April 14.
+                Registration is open until April 30.
                 </h5>
                 <h6>
-                Here you can access <a href="https://forms.gle/y1tgmc16LXaFHwJo8"> the registration form</a>
+                Here you can access <a href="www.bayesplurinacional.org/link/InscripcionSalta2024.html"> the registration form</a>
                 and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">last flayer</a>.
                 </h5>
                 </h6>
 
                 <br>
 
-
-
-                <h6 class="header col s12 light">
-                <b>Learn to teach to learn</b>.
-                <br>
-                Preserving the previous belief that remains compatible with the data.
-                <br>
-                Predicting with the contribution of all hypotheses.
-                <br>
-                Intersubjective agreements in contexts of uncertainty.
-                <br>
-                Memory, Truth and Justice.
-                </h6>
                </div>
 
-               <!--<div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
-                </div>-->
+               <div class="row center">
+                <h4 class="header col s12 light">Permanent Virtual Seminar.</h4>
+                <h5 class="header col s12 light">Permanent registrations.
+                </h5>
+                <h6>
+                Access the <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">virtual event registration form</a>
+                </h5>
+                </h6>
+
+                <br>
+
+
+                </div>
+
+
+            <div class="row center">
+                <h5 class="header col s12 light">With the support of the Latin American Artificial Intelligence organization KHIPU and the National University of Salta, Argentina.</h5>
+            </div>
 
         </div>
         </div>
 
         <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
+            <a href="https://www.unsa.edu.ar/" target="_blank"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
             </div>
 
             <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
-            <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
+            <a href="https://khipu.ai/" target="_blank"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
             </div>
         </div>
 
