--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -150,7 +150,9 @@
                 La Escuela Bayes Plurinacional tiene entre sus objetivos fortalecer la oferta de formación en investigación y/o aplicación de la inferencia bayesiana, mediante el desarrollo de talleres dictados por especialistas de nuestra región, como así también impulsar lazos, capacidades e interacción para el aprendizaje y la implementación de estos conceptos.
                 Por ello, el próximo 6 de agosto de 2024 se dará inicio a la Escuela-Congreso Bayes Plurinacional en Salta, Argentina.
                 Durante 3 días nos reuniremos en la Universidad Nacional de Salta para realizar talleres prácticos, exposiciones, mesas de debate y sesiones de pósters, finalizando con un Hackatón.
-                Registrate la Escuela-Congreso Bayes Plurinacional <a href="https://forms.gle/y1tgmc16LXaFHwJo8">aquí</a>.
+                Registra tu propuesta para la Escuela-Congreso Bayes Plurinacional 2024 <a href="www.bayesplurinacional.org/link/InscripcionSalta2024.html"><b>aquí</b></a>.
+                Tenés tiempo hasta el 30 de abril.
+                Para proponer eventos virtuales, acceda de forma permanente al siguiente <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">formulario</a>.
                 </h6>
 
                 <br>
@@ -202,8 +204,8 @@
 
                 <br><br>
 
-                <b>¿Te interesa dar un Taller o Charla?</b> Completá el siguiente <a href="https://forms.gle/y1tgmc16LXaFHwJo8">formulario</a>.
-                Se aceptarán propuestas hasta el 14 de abril 2024. Por consultas, dirigirse al e-mail bayesplurinacional@gmail.com
+                <b>¿Te interesa dar un taller o una charla, organizar una mesa debate o presentar un póster?</b> Completá el siguiente <a href="www.bayesplurinacional.org/link/InscripcionSalta2024.html">formulario</a>.
+                Se aceptarán propuestas hasta el 30 de abril 2024. Por consultas, dirigirse al e-mail bayesplurinacional@gmail.com
 
                 <ul>
                     <li> <b>Talleres de nivel inicial "Verdades empíricas" (9 a 12 hs):</b>
@@ -239,7 +241,7 @@
                 <br>
 
                 <h6>
-                <b>Registrate como Asistente o Expositor</b> completando este <a href="https://forms.gle/y1tgmc16LXaFHwJo8">formulario</a>. Inscripciones abiertas hasta el 14 de abril.
+                <b>Registrate como Asistente o Expositor</b> completando este <a href="www.bayesplurinacional.org/link/InscripcionSalta2024.html">formulario</a>. Inscripciones de propuestas abiertas hasta el 30 de abril.
                 </h6>
 
             <!--<div class="figcontainer" style="align-items: center;">
