--- a/es/index.html
+++ b/es/index.html
@@ -163,46 +163,60 @@
 
             <div class="center"><img class="responsive-img" src="../logos/BP.svg" alt="logo_unsl" style="width: 90%;">
             <h6 class="header col s12 light"><b>Promoviendo la Inteligencia Bayesiana en la América Plurinacional y los pueblos del sur global.</b></h6>
+
+              <h6 class="header col s12 light">
+                Preservando la creencia previa que sigue siendo compatible con los datos.
+                Prediciendo con la contribución de todas las hipótesis.
+                Distribución de creencias óptimas dada la información disponible.
+                Acuerdos intersubjetivos en contextos de incertidumbre.
+                Memoria, Verdad y Justicia.
+                </h6>
             </div>
 
             <br>
 
+
+
             <div class="row center">
                 <h4 class="header col s12 light">Escuela-Congreso Bayes Plurinacional 2024!</h4>
-                <!--<h6 class="header col s12 light"><b>Aprender a enseñar a aprender</b></h6>-->
-
+                <h5 class="header col s12 light">
+                Del 6 al 9 de agosto. Salta, Argentina. Sin costo y con becas.
                 <br>
-                <br>
-
-                <h5 class="header col s12 light">Inscripciones abiertas hasta el 14 de abril.
+                Inscripción de propuestas hasta el 30 de abril.
                 </h5>
                 <h6>
-                Aquí puede acceder al <a href="https://forms.gle/y1tgmc16LXaFHwJo8">formulario de inscripción</a>
+                Acceda al <a href="www.bayesplurinacional.org/link/InscripcionSalta2024.html">formulario de inscripción de la Escuela-Congreso</a>
                 y
                 al <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">último volante</a>.
+                </h6>
+
+
+                <br>
+
+
+            </div>
+
+            <div class="row center">
+                <h4 class="header col s12 light">Seminario Virtual Permanente.</h4>
+                <h5 class="header col s12 light">Inscripciones Permanentes.
+                </h5>
+                <h6>
+                Acceda al <a href="www.bayesplurinacional.org/link/InscripcionEventosVirtuales.html">formulario de inscripción de eventos virtuales</a>
                 </h5>
                 </h6>
 
                 <br>
 
-                <h6 class="header col s12 light">
-                <b>Apender a enseñar a aprender</b>.
-                <br>
-                Preservando la creencia previa que sigue siendo compatible con los datos.
-                <br>
-                Prediciendo con la contribución de todas las hipótesis.
-                <br>
-                Acuerdos intersubjetivos en contextos de incertidumbre.
-                <br>
-                Memoria, Verdad y Justicia.
-                </h6>
 
             </div>
 
 
-			<!--<div class="row center">
-                <h5 class="header col s12 light">¡Participe de la creciente comunidad bayesiana plurinacional!</h5>
-            </div>-->
+
+
+
+            <div class="row center">
+                <h5 class="header col s12 light">Con el apoyo de la organización de Inteligencia Artificial de Latinoamérica KHIPU y la Universidad Nacional de Salta, Argentina.</h5>
+            </div>
 
         </div>
         </div>
@@ -210,11 +224,11 @@
 
         <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
+            <a href="https://www.unsa.edu.ar/" target="_blank"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
             </div>
 
             <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
-            <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
+            <a href="https://khipu.ai/" target="_blank"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
             </div>
         </div>
 
