--- a/en/about.html
+++ b/en/about.html
@@ -141,7 +141,10 @@
                     The Plurinational Bayes School aims to enhance the training opportunities in research and/or application of Bayesian inference by offering workshops conducted by specialists from our region.
                     Additionally, it seeks to foster connections, skills, and interaction to facilitate learning and the practical implementation of these concepts. Therefore, on August 6, 2024, the Plurinational Bayes School-Congress will begin in Salta, Argentina.
                     For 3 days, we will gather at the National University of Salta to conduct practical workshops, presentations, debate tables, and poster sessions, concluding with a Hackathon.
-                    Register for the Plurinational Bayes School-Congress <a href="https://forms.gle/y1tgmc16LXaFHwJo8">here</a>.
+                    Register for the Plurinational Bayes School-Congress 2024 <a href="https://forms.gle/y1tgmc16LXaFHwJo8">here</a>.
+                    You have time until April 30.
+                    To propose virtual events, you can permanently access the following form.
+
                 </h6>
 
                 <br>
@@ -192,8 +195,8 @@
 
                 <br><br>
 
-                <b>Are you interested in giving a Workshop or Talk?</b> Please, complete the following <a href="https://forms.gle/y1tgmc16LXaFHwJo8">form</a>.
-                Proposals will be accepted until April 14, 2024. For further information, please send an e-mail to bayesplurinacional@gmail.com
+                <b>Are you interested in giving a workshop, a talk, a ?</b> Please, complete the following <a href="https://forms.gle/y1tgmc16LXaFHwJo8">form</a>.
+                Proposals will be accepted until April 30, 2024. For further information, please send an e-mail to bayesplurinacional@gmail.com
 
                     <ul>
                         <li><b>Initial level workshops "Empirical truths" (9 am - 12 pm):</b> Broad, comprehensive, and in-depth view on: Bayesian networks; causal inference and model evaluation; information theory and data operationalization; time series and approximations; decision-making and betting.
@@ -213,7 +216,7 @@
                 <br>
 
                 <h6>
-                    <b>Register as an Attendee or Presenter</b> by filling out this <a href="https://forms.gle/y1tgmc16LXaFHwJo8">form</a>. Registrations open until April 14.
+                    <b>Register as an Attendee or Presenter</b> by filling out this <a href="https://forms.gle/y1tgmc16LXaFHwJo8">form</a>. Registrations open until April 30.
                 </h6>
 
                 <div class="figcontainer" style="align-items: center;">
