--- a/link/InscripcionSalta2024.html
+++ b/link/InscripcionSalta2024.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://forms.gle/y1tgmc16LXaFHwJo8">
+<meta http-equiv="refresh" content="0; url=https://forms.gle/KBUyub6vwgj3mSns5">
