Link en INDEX a inscripcion Salta

--- a/es/index.html
+++ b/es/index.html
@@ -185,7 +185,7 @@
                 Inscripción de propuestas hasta el 30 de abril.
                 </h5>
                 <h6>
-                Acceda al <a href="https://forms.gle/y1tgmc16LXaFHwJo8">formulario de inscripción de la Escuela-Congreso</a>
+                Acceda al <a href="https://forms.gle/KBUyub6vwgj3mSns5">formulario de inscripción de la Escuela-Congreso</a>
                 y
                 al <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">último volante</a>.
                 </h6>
