--- a/en/index.html
+++ b/en/index.html
@@ -144,7 +144,7 @@
                 Registration is open until April 30.
                 </h5>
                 <h6>
-                Here you can access <a href="https://forms.gle/y1tgmc16LXaFHwJo8"> the registration form</a>
+                Here you can access <a href="https://forms.gle/KBUyub6vwgj3mSns5"> the registration form</a>
                 and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">last flayer</a>.
                 </h5>
                 </h6>
