--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -150,7 +150,7 @@
                 La Escuela Bayes Plurinacional tiene entre sus objetivos fortalecer la oferta de formación en investigación y/o aplicación de la inferencia bayesiana, mediante el desarrollo de talleres dictados por especialistas de nuestra región, como así también impulsar lazos, capacidades e interacción para el aprendizaje y la implementación de estos conceptos.
                 Por ello, el próximo 6 de agosto de 2024 se dará inicio a la Escuela-Congreso Bayes Plurinacional en Salta, Argentina.
                 Durante 3 días nos reuniremos en la Universidad Nacional de Salta para realizar talleres prácticos, exposiciones, mesas de debate y sesiones de pósters, finalizando con un Hackatón.
-                Registra tu propuesta para la Escuela-Congreso Bayes Plurinacional 2024 <a href="www.bayesplurinacional.org/link/InscripcionSalta2024.html"><b>aquí</b></a>.
+                Registra tu propuesta para la Escuela-Congreso Bayes Plurinacional 2024 <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html"><b>aquí</b></a>.
                 Tenés tiempo hasta el 30 de abril.
                 Para proponer eventos virtuales, acceda de forma permanente al siguiente <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">formulario</a>.
                 </h6>
