Links en descripción y seminario

--- a/en/about.html
+++ b/en/about.html
@@ -141,9 +141,9 @@
                     The Plurinational Bayes School aims to enhance the training opportunities in research and/or application of Bayesian inference by offering workshops conducted by specialists from our region.
                     Additionally, it seeks to foster connections, skills, and interaction to facilitate learning and the practical implementation of these concepts. Therefore, on August 6, 2024, the Plurinational Bayes School-Congress will begin in Salta, Argentina.
                     For 3 days, we will gather at the National University of Salta to conduct practical workshops, presentations, debate tables, and poster sessions, concluding with a Hackathon.
-                    Register for the Plurinational Bayes School-Congress 2024 <a href="https://forms.gle/y1tgmc16LXaFHwJo8">here</a>.
+                    Register for the Plurinational Bayes School-Congress 2024 <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html">here</a>.
                     You have time until April 30.
-                    To propose virtual events, you can permanently access the following form.
+                    To propose virtual events, you can permanently access the following <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">form</a>.
 
                 </h6>
 
@@ -195,7 +195,7 @@
 
                 <br><br>
 
-                <b>Are you interested in giving a workshop, a talk, a ?</b> Please, complete the following <a href="https://forms.gle/y1tgmc16LXaFHwJo8">form</a>.
+                <b>Are you interested in giving a workshop, a talk, a debate, a poster?</b> Please, complete the following <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html">form</a>.
                 Proposals will be accepted until April 30, 2024. For further information, please send an e-mail to bayesplurinacional@gmail.com
 
                     <ul>
@@ -216,7 +216,7 @@
                 <br>
 
                 <h6>
-                    <b>Register as an Attendee or Presenter</b> by filling out this <a href="https://forms.gle/y1tgmc16LXaFHwJo8">form</a>. Registrations open until April 30.
+                    <b>Register as an Attendee or Presenter</b> by filling out this <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html">form</a>. Registrations open until April 30.
                 </h6>
 
                 <div class="figcontainer" style="align-items: center;">
