--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -204,7 +204,7 @@
 
                 <br><br>
 
-                <b>¿Te interesa dar un taller o una charla, organizar una mesa debate o presentar un póster?</b> Completá el siguiente <a href="www.bayesplurinacional.org/link/InscripcionSalta2024.html">formulario</a>.
+                <b>¿Te interesa dar un taller o una charla, organizar una mesa debate o presentar un póster?</b> Completá el siguiente <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html">formulario</a>.
                 Se aceptarán propuestas hasta el 30 de abril 2024. Por consultas, dirigirse al e-mail bayesplurinacional@gmail.com
 
                 <ul>
@@ -241,7 +241,7 @@
                 <br>
 
                 <h6>
-                <b>Registrate como Asistente o Expositor</b> completando este <a href="www.bayesplurinacional.org/link/InscripcionSalta2024.html">formulario</a>. Inscripciones de propuestas abiertas hasta el 30 de abril.
+                <b>Registrate como Asistente o Expositor</b> completando este <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html">formulario</a>. Inscripciones de propuestas abiertas hasta el 30 de abril.
                 </h6>
 
             <!--<div class="figcontainer" style="align-items: center;">
