Links estables en Index

--- a/en/index.html
+++ b/en/index.html
@@ -144,7 +144,7 @@
                 Registration is open until April 30.
                 </h5>
                 <h6>
-                Here you can access <a href="https://forms.gle/KBUyub6vwgj3mSns5"> the registration form</a>
+                Here you can access <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"> the registration form</a>
                 and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">last flayer</a>.
                 </h5>
                 </h6>
@@ -158,7 +158,7 @@
                 <h5 class="header col s12 light">Permanent registrations.
                 </h5>
                 <h6>
-                Access the <a href="https://docs.google.com/forms/d/e/1FAIpQLScSXNYhaNZZh4_sDZtqK6bX3qmG36fKdPdpuVcsXdetTJRSYg/viewform">virtual event registration form</a>
+                Access the <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html" target="_blank">virtual event registration form</a>
                 </h5>
                 </h6>
 
