--- a/es/index.html
+++ b/es/index.html
@@ -185,7 +185,7 @@
                 Inscripción de propuestas hasta el 30 de abril.
                 </h5>
                 <h6>
-                Acceda al <a href="https://forms.gle/KBUyub6vwgj3mSns5">formulario de inscripción de la Escuela-Congreso</a>
+                Acceda al <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank">formulario de inscripción de la Escuela-Congreso</a>
                 y
                 al <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">último volante</a>.
                 </h6>
@@ -201,7 +201,7 @@
                 <h5 class="header col s12 light">Inscripciones Permanentes.
                 </h5>
                 <h6>
-                Acceda al <a href="https://docs.google.com/forms/d/e/1FAIpQLScSXNYhaNZZh4_sDZtqK6bX3qmG36fKdPdpuVcsXdetTJRSYg/viewform">formulario de inscripción de eventos virtuales</a>
+                Acceda al <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html" target="_blank">formulario de inscripción de eventos virtuales</a>
                 </h5>
                 </h6>
 
