--- a/en/organize.html
+++ b/en/organize.html
@@ -177,7 +177,7 @@
         <div class="container">
             <ul>
                 <h6><b>Communication</b> team:</h6>
-                <li>&#x2022; Responsible: Ana Veronica Scotta, Camila Nader. </li>
+                <li>&#x2022; Responsible: Camila Neder, Ana Veronica Scotta. </li>
                 <li>&#x2022; Main collaborators: Victor Notar Francesco, Noelia Arguelles, Luiggina Cappellotto, Yasmín Navarrete.</li>
             </ul>
 
