--- a/es/organiza.html
+++ b/es/organiza.html
@@ -188,7 +188,7 @@
 
                 <ul>
                 <h6>Equipo <b>Comunicación</b>:</h6>
-                    <li>&#x2022; Responsables: Ana Veronica Scotta, Camila Nader. </li>
+                    <li>&#x2022; Responsables: Camila Neder, Ana Veronica Scotta. </li>
                     <li>&#x2022; Principales colaboradores: Victor Notar Francesco, Noelia Arguelles, Luiggina Cappellotto, Yasmín Navarrete.</li>
                 </ul>
 
