Fecha de cierre

--- a/es/index.html
+++ b/es/index.html
@@ -180,9 +180,9 @@
             <div class="row center">
                 <h4 class="header col s12 light">Escuela-Congreso Bayes Plurinacional 2024!</h4>
                 <h5 class="header col s12 light">
-                Del 6 al 9 de agosto. Salta, Argentina. Sin costo y con becas.
+                Del 6 al 8 de agosto. Salta, Argentina. Sin costo y con becas.
                 <br>
-                Inscripción de propuestas hasta el 30 de abril.
+                Inscripción de propuestas hasta el 3 de mayo.
                 </h5>
                 <h6>
                 Acceda al <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank">formulario de inscripción de la Escuela-Congreso</a>
