when2meet, horario de reunión.

--- a/en/index.html
+++ b/en/index.html
@@ -138,15 +138,13 @@
 
             <div class="row center">
                 <h4 class="header col s12 light">Plurinational Bayes School-Congress 2024!</h4>
-                <h5 class="header col s12 light">
-                August 6 to 8. Salta, Argentina. Free of charge.
+                <h5 class="header col s12 light"><b>August 6 to 8. Salta, Argentina. Free of charge.</b>
                 <br>
-                Registration is open until May 3.
+                The call for proposals has closed. A decision will be given before the end of May.
                 </h5>
                 <h6>
-                Here you can access <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"> the registration form</a>
-                and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">last flayer</a>.
-                </h5>
+                Here you can access <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"> the registration form</a> (only for students and attendees)
+                <!--and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">last flayer</a>.-->
                 </h6>
 
                 <br>
