--- a/es/index.html
+++ b/es/index.html
@@ -180,14 +180,14 @@
             <div class="row center">
                 <h4 class="header col s12 light">Escuela-Congreso Bayes Plurinacional 2024!</h4>
                 <h5 class="header col s12 light">
-                Del 6 al 8 de agosto. Salta, Argentina. Sin costo y con becas.
+                <b>Del 6 al 8 de agosto. Salta, Argentina. Sin costo y con becas.</b>
                 <br>
-                Inscripción de propuestas hasta el 3 de mayo.
+                Convocatoria de propuestas cerrada. Se comunicará la decisión a finales de mayo.
                 </h5>
                 <h6>
-                Acceda al <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank">formulario de inscripción de la Escuela-Congreso</a>
-                y
-                al <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">último volante</a>.
+                Acceda al <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank">formulario de inscripción</a> (solo para estudiantes y asistentes).
+                <!--y
+                al <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">último volante</a>.-->
                 </h6>
 
 
