--- a/en/organize.html
+++ b/en/organize.html
@@ -161,17 +161,28 @@
 
             </div>
 
-            <div class="column">
-                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
-                <h5><p>Gustavo Landfried</p></h5>
-                <h6><p>Coordinator Plurinational Bayes</p></h6>
+
+            <div class="row">
+
+                <div class="column">
+                    <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
+                    <h5><p>Gustavo Landfried</p></h5>
+                    <h6><p>Coordinator 2024 Plurinational Bayes</p></h6>
+                </div>
+
+               <div class="column">
+		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
+		                <h5><p>Andrea Goijman</p></h5>
+		                <h6><p>Vice-coordinator 2024 Bayes Plurinacional</p></h6>
+                </div>
+
+                <div class="column">
+                    <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
+                    <h5><p>Ariel Silvio Norberto Ramos</p></h5>
+                    <h6><p>Host 2024 Universidad Nacional de Salta</p></h6>
+                </div>
             </div>
 
-            <div class="column">
-                <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
-                <h5><p>Ariel Silvio Norberto Ramos</p></h5>
-                <h6><p>Host Universidad Nacional de Salta</p></h6>
-            </div>
         </div>
 
         <div class="container">
@@ -208,7 +219,7 @@
                 <h6>Scientific and Technical <b>Advisory Committee</b>:</h6>
                 <li>&#x2022; Principal Responsible: Sergio Davis (Chile) </li>
                 <li>&#x2022; Substitute Responsible: Gabriel Alzamendi (Argentina)</li>
-                <li>&#x2022; Advisor 3: Albert Ortiz (Colombia)</li>
+                <li>&#x2022; Advisor 3: Rafel Tovar (Colombia)</li>
                 <li>&#x2022; Advisor 4: Lucía Morán Figueredo (Paraguay)</li>
                 <li>&#x2022; Advisor 5: Francisco Linares Cedeño (México)</li>
             </ul>
@@ -336,7 +347,7 @@
                 <br>
                 57. Luis Felipe Martínez Soto (Laboratorio de Pruebas Eléctricas y EMC; Centro de Ingeniería y Desarrollo Industrial, Querétaro, México)
                 <br>
-                58. Gonzalo Rios (Marketing Matemático; NoiseGrasp, Chile)
+                58. Gonzalo Rios (Marketing Matemático, Chile)
 
         </div>
 
