--- a/es/organiza.html
+++ b/es/organiza.html
@@ -167,20 +167,30 @@
             </div>
 
 
-
+            <div class="row">
                <div class="column">
 		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
 		                <h5><p>Gustavo Landfried</p></h5>
-		                <h6><p>Coordinador Bayes Plurinacional</p></h6>
+		                <h6><p>Coordinador 2024 Bayes Plurinacional</p></h6>
+                </div>
+
+               <div class="column">
+		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
+		                <h5><p>Andrea Goijman</p></h5>
+		                <h6><p>Vice-coordinadora 2024 Bayes Plurinacional</p></h6>
                 </div>
 
                 <div class="column">
                     <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
                     <h5><p>Ariel Silvio Norberto Ramos</p></h5>
-                    <h6><p>Anfitrión Universidad Nacional de Salta</p></h6>
+                    <h6><p>Anfitrión 2024 Universidad Nacional de Salta</p></h6>
                 </div>
-
             </div>
+
+
+        </div>
+
+        <br>
 
         <div class="container">
 
@@ -223,7 +233,7 @@
                 <h6>Comité de <b>asesores científicos</b> y técnicos:</h6>
                     <li>&#x2022; Responsables Principal: Sergio Davis (Chile) </li>
                     <li>&#x2022; Responsable Suplente: Gabriel Alzamendi (Argentina)</li>
-                    <li>&#x2022; Asesor 3: Albert Ortiz (Colombia)</li>
+                    <li>&#x2022; Asesor 3: Rafael Tovar (Colombia)</li>
                     <li>&#x2022; Asesor 4: Lucía Morán Figueredo (Paraguay)</li>
                     <li>&#x2022; Asesor 5: Francisco Linares Cedeño (México)</li>
                 </ul>
@@ -350,7 +360,7 @@
                 <br>
                 57. Luis Felipe Martínez Soto (Laboratorio de Pruebas Eléctricas y EMC; Centro de Ingeniería y Desarrollo Industrial, Querétaro, México)
                 <br>
-                58. Gonzalo Rios (Marketing Matemático; NoiseGrasp, Chile)
+                58. Gonzalo Rios (Marketing Matemático, Chile)
 
         </div>
 
