--- a/link/HorariosReunion.html
+++ b/link/HorariosReunion.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://www.when2meet.com/?24983955-OzpfF">
+<meta http-equiv="refresh" content="0; url=https://www.when2meet.com/?24183844-UdsqY">
